# moodle-client

./: CLAUDE.md  PLAN.md  README.md  cli.py  pyproject.toml
moodle/: activity.py  cli.py  course.py  session.py
